--- a/Tree.html
+++ b/Tree.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
 
+<h1>Why Not Check Out Other Tree Resources</h1>
+<p>https://www.greendrop.com/learn/7-simple-steps-to-keep-your-trees-healthy-thriving#:~:text=Regular%20trimming%2C%20watering%2C%20and%20fertilizing,overgrowth%2C%20and%20disease%20is%20crucial.</p>
+
+</body>
+</html>
