--- a/Tree.html
+++ b/Tree.html
@@ -10,3 +10,17 @@
 </body>
 </html>
 
+body {
+    background-color: royalblue;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  h1 {
+    color: #0000F0;
+  }
+
+  p {
+    color: yellow;
+  }
+
+  
