--- a/o.html
+++ b/o.html
@@ -4,23 +4,11 @@
 </head>
 <body>
 
-<h1>Why Not Check Out Other Tree Resources</h1>
+<h1 style="color: green"> Why Not Check Out Other Tree Resources </h1>
 <p>https://www.greendrop.com/learn/7-simple-steps-to-keep-your-trees-healthy-thriving#:~:text=Regular%20trimming%2C%20watering%2C%20and%20fertilizing,overgrowth%2C%20and%20disease%20is%20crucial.</p>
 
 </body>
 </html>
 
-body {
-    background-color: royalblue;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  h1 {
-    color: #0000F0;
-  }
-
-  p {
-    color: yellow;
-  }
 
   
